k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-session-api
  namespace: gameops
  labels:
    app.kubernetes.io/name: game-session-api
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  selector:
    app.kubernetes.io/name: game-session-api
  ports:
    - name: http
      port: 8000
      targetPort: http
